cli/tests/testdata/fmt/fmt_check_parse_error.out
Error checking: [WILDCARD]
   Line 2, column 7: Expected '{', got '<eof>'

  class Test
        ~~~~
error: Found 1 not formatted file in 1 file
